force-app/main/default/objects/FileTemplateColumn__c/FileTemplateColumn__c.object-meta.xml
<CustomObject>
    <label>File Template Column</label>
    <nameField>
        <displayFormat>FTC-{00000000}</displayFormat>
        <label>Nome FileTemplateColumn</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FileTemplateColumns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>