force-app/main/default/objects/FileTemplateColumn__c/fields/DataType__c.field-meta.xml
<CustomField>
    <fullName>DataType__c</fullName>
    <label>Data Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>DateTime</fullName>
            </value>
            <value>
                <fullName>Integer</fullName>
            </value>
            <value>
                <fullName>Decimal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>