force-app/main/default/objects/FileTemplateColumn__c/fields/FileTemplate__c.field-meta.xml
<CustomField>
    <fullName>FileTemplate__c</fullName>
    <label>FileTemplate</label>
    <referenceTo>FileTemplate__c</referenceTo>
    <relationshipLabel>FileTemplateColumns</relationshipLabel>
    <relationshipName>FileTemplateColumns</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>