force-app/main/default/objects/FileTemplateColumn__c/fields/HeaderApiName__c.field-meta.xml
<CustomField>
    <fullName>HeaderApiName__c</fullName>
    <label>Header Api Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>