force-app/main/default/objects/FileTemplateColumn__c/fields/HeaderName__c.field-meta.xml
<CustomField>
    <fullName>HeaderName__c</fullName>
    <label>Header Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>